# NeuroTask---Main

./: .gitignore  CLAUDE.md  ROADMAP.md
backend/: .env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 72f9f9b38234_initial_migration.py
backend/api/: deps.py
backend/api/routers/: tasks.py  time_blocks.py  users.py
backend/core/: config.py
backend/db/: database.py
backend/models/: task.py  time_block.py  user.py
backend/schemas/: task.py  time_block.py  user.py
backend/services/: task.py  time_block.py  user.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/components/: app-shell.tsx  avatar-editor.tsx  avatar-figure.tsx  confetti.tsx  date-picker.tsx  dock.tsx  focus.tsx  friends-section.tsx  header.tsx  invite-dialog.tsx  office-figure-3d.tsx  office-scene-3d.tsx  office-scene.tsx  owl-mascot.tsx  page-transition.tsx  reminder-notifier.tsx  rich-text-editor.tsx  robot-mascot.tsx  seated-character.tsx  sound-mixer.tsx  task-card.tsx  task-dialog.tsx  time-block-dialog.tsx  voice-conversation.tsx  (+1 more)
supabase/: activity_log.sql  coins_shop.sql  day_notes.sql  favorites.sql  fix_schema.sql  friends.sql  friends_agenda.sql  gamification.sql  notes.sql  office_3d.sql  push.sql  push_cron.sql  realtime.sql  reminders.sql  routine_activities.sql  routine_profile.sql  skins.sql  social_v2.sql  task_lists.sql  task_meeting.sql  task_order.sql  task_recurrence.sql  xp_anticheat.sql
vercel/: project.json
(+63 files in other folders)
