[tool.poetry]
name = "neurotask-backend"
version = "0.1.0"
description = "NeuroTask FastAPI backend service"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.32" }
asyncpg = "^0.29.0"
psycopg = { extras = ["binary"], version = "^3.2.1" }
alembic = "^1.13.2"
pydantic = "^2.7.4"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.5.6"
black = "^24.8.0"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
